--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -42,19 +42,17 @@
         <!-- Modal -->
     <div class="modal fade" id="guideModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div id="arrowWindow" class="arrow_box arrow_right">
-            <center><b><span id="tip-title"></span></b></center>
-            <center><span id="tip"></span></center>
         </div>
         <div class="no-click-layer"></div>
         <div>
             <button data-count="1" id="btnNextTip" type="button" class="btn-tip btn btn-info btn-lg">Next</button>
             <button data-count="0" id="btnPreviousTip" type="button" class="btn-tip btn btn-info btn-lg" disabled>
-                Back
+                Previous
             </button>
             <button id="btnSkipTips" type="button" class="btn btn-default btn-lg">
                 Skip
             </button>
-            <label id="chkHideTip"><input type="checkbox" aria-label="Do not show again.">Do not show again</label>
+            <label id="chkHideTip"><input type="checkbox" aria-label=" Do not show again."> Do not show again</label>
         </div>
     </div>
 
