Minor style changes

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -45,11 +45,11 @@
         </div>
         <div class="no-click-layer"></div>
         <div>
-            <button data-count="1" id="btnNextTip" type="button" class="btn-tip btn btn-info btn-lg">Next</button>
-            <button data-count="0" id="btnPreviousTip" type="button" class="btn-tip btn btn-info btn-lg" disabled>
+            <button data-count="1" id="btnNextTip" type="button" class="btn-tip btn btn-lg">Next</button>
+            <button data-count="0" id="btnPreviousTip" type="button" class="btn-tip btn btn-lg" disabled>
                 Previous
             </button>
-            <button id="btnSkipTips" type="button" class="btn btn-default btn-lg">
+            <button id="btnSkipTips" type="button" class="btn btn-lg">
                 Skip
             </button>
             <label id="chkHideTip"><input type="checkbox" aria-label=" Do not show again."> Do not show again</label>
