--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -515,15 +515,6 @@ path[data-zip] {
     text-align: center;
 }
 
-#btnNextTip {
-    bottom: 100px;
-    position: fixed;
-    right: 280px;
-    width: 200px;
-    outline: none;
-    border: 2px solid rgb(28, 157, 195);
-}
-
 #chkHideTip {
     bottom: 150px;
     position: fixed;
@@ -532,28 +523,36 @@ path[data-zip] {
     outline: none;
 }
 
+#btnNextTip {
+    bottom: 100px;
+    position: fixed;
+    right: 280px;
+    width: 200px;
+    outline: none;
+    border: 1px solid rgb(95, 95, 95);
+}
+
 #btnPreviousTip {
     bottom: 100px;
     position: fixed;
     right: 500px;
     width: 200px;
     outline: none;
-    border: 2px solid rgb(28, 157, 195);
+    border: 1px solid rgb(95, 95, 95);
 }
 
 #btnPreviousTip, #btnNextTip {
-    background-image: -webkit-linear-gradient(top, #78CEE7, #1C9DC3);
-    background-image: -moz-linear-gradient(top, #78CEE7, #1C9DC3);
-    background-image: -o-linear-gradient(top, #78CEE7, #1C9DC3);
-    background-image: -ms-linear-gradient(top, #78CEE7, #1C9DC3);
+    background-image: -webkit-linear-gradient(top, #C5C5C5, #939393);
+    background-image: -moz-linear-gradient(top, #C5C5C5, #939393);
+    background-image: -o-linear-gradient(top, #C5C5C5, #939393);
+    background-image: -ms-linear-gradient(top, #C5C5C5, #939393);
 }
 
 #btnPreviousTip:hover, #btnNextTip:hover {
-    background-image: -webkit-linear-gradient(top, #BBE7F4, #1C9DC3);
-    background-image: -moz-linear-gradient(top, #BBE7F4, #1C9DC3);
-    background-image: -o-linear-gradient(top, #BBE7F4, #1C9DC3);
-    background-image: -ms-linear-gradient(top, #BBE7F4, #1C9DC3);
-
+    background-image: -webkit-linear-gradient(top, #D3D3D3, #939393);
+    background-image: -moz-linear-gradient(top, #D3D3D3, #939393);
+    background-image: -o-linear-gradient(top, #D3D3D3, #939393);
+    background-image: -ms-linear-gradient(top, #D3D3D3, #939393);
 }
 
 #btnSkipTips {
@@ -562,7 +561,7 @@ path[data-zip] {
     right: 60px;
     width: 200px;
     outline: none;
-    border: 2px solid rgb(134, 134, 134);
+    border: 1px solid rgb(134, 134, 134);
     background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
     background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
     background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
