--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -3,7 +3,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    min-width: 1000px;
+    min-width: 500px;
     min-height: 600px;
 }
 
@@ -26,17 +26,14 @@ h6 {
     padding: 4px;
 }
 
-.thumbnail {
-    width: 200px;
-    float: left;
-    position: absolute;
+#surveyContainer .survey {
     border: 1px solid #ddd;
-    background-color: #FFF;
-    text-align: center;
+    background-color: #F3FAFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    padding: 10px;
+    padding: 20px;
+    height:300px;
 }
 
 #txtDescription {
@@ -48,7 +45,7 @@ h6 {
     width: 100%;
 }
 
-.thumbnail .caption {
+.survey .caption {
     padding: 9px;
     color: #333;
     float: left;
@@ -83,8 +80,12 @@ h6 {
     background: #ddd;
 }
 
-.thumbnail img {
-    height: 50px;
+.survey img {
+     height: 30px;
+}
+
+.survey a.btn {
+    margin-bottom:10px;
 }
 
 #surveyContainer {
@@ -95,7 +96,6 @@ h6 {
 
 svg {
     cursor: default;
-
 }
 
 #mainContent {
@@ -652,12 +652,12 @@ div.arrow_box {
 }
 
 div.arrow_box img {
-      border: 1px solid #A5A5A5;
-  padding: 3px;
-  width: 100%;
-  border-radius: 5px;
-  margin-top: 10px;
-  background: #ddd;
+    border: 1px solid #A5A5A5;
+    padding: 3px;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 10px;
+    background: #ddd;
 }
 
 div.arrow_box .carousel-indicators {
@@ -818,4 +818,17 @@ div.arrow_box .carousel img {
 
 .tips-table td {
     padding: 10px;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.buttons-container {
+    margin-top: 20px;
+    bottom: 0;
+    left: 0;
+    padding: 10px 50px;
+    text-align: center;
+    position: absolute;
 }
