Added empty About and Contact pages.

--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">About</a>
+                            <a href="{% url 'about-view' %}">About</a>
                         </li>
                         <li>
                             <a href="{% url 'home' %}">Surveys</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="{% url 'contact-view' %}">Contact</a>
                         </li>
                     </ul>
                 </div>
