Style changes on tips

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -74,9 +74,9 @@
             <div id="top-bar">
                 <div id="captionContainer" class="panel panel-primary">
                   <div class="panel-heading">
-                    <span id="txtTitle" class="panel-title">Welcome!</span>
+                    <span class="panel-title">Welcome!</span>
                   </div>
-                  <div id="txtDescription" class="panel-body">
+                  <div class="panel-body">
                     Select a question to get started
                   </div>
                 </div>
