--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -665,7 +665,7 @@ div.arrow_box {
 }
 
 div.arrow_box img {
-    border: 1px solid #A8A8A8;
+    border: 1px solid rgb(16, 112, 124);
     width: 100%;
     margin-top: 10px;
 }
@@ -696,7 +696,7 @@ div.arrow_box .carousel {
 }
 
 div.arrow_box .carousel img {
-    border: 0;
+      border: 1px solid rgb(16, 112, 124);
 }
 
 /*Arrow on top*/
@@ -787,7 +787,6 @@ div.arrow_box .carousel img {
 }
 
 #tip, #tip-title {
-    color: #000;
     font-size: 16px;
     line-height: 24px;
     text-shadow: 0 1px 2px rgba(1, 1, 1, 0.2);
