--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -84,8 +84,19 @@ h6 {
     height: 30px;
 }
 
-.survey a.btn {
-    margin-bottom: 10px;
+.survey a.blue-button, .survey a.gray-button {
+    margin-bottom: 5px;
+    text-decoration: none;
+}
+
+#btn-back {
+    margin-top: 30px;
+    float:left;
+}
+
+#view-instrument, #view-data {
+    float: right;
+    margin-top: 30px;
 }
 
 #surveyContainer {
@@ -539,7 +550,7 @@ path[data-zip] {
     outline: none;
 }
 
-#btnPreviousTip, #btnNextTip {
+.blue-button {
     background: -webkit-linear-gradient(top, #C2FAFF 0%, #7FD8E3 100%);
     background: linear-gradient(to bottom, #C2FAFF 0%, #7FD8E3 100%);
     border: 1px solid #3DC3D3;
@@ -556,7 +567,7 @@ path[data-zip] {
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.5), 0 1px 0 0 white;
 }
 
-#btnPreviousTip:hover, #btnNextTip:hover {
+.blue-button:hover {
     background: -webkit-linear-gradient(top, #E7FDFF 0%, #92E3ED 100%);
     background: linear-gradient(to bottom, #E7FDFF 0%, #92E3ED 100%);
 }
@@ -566,6 +577,10 @@ path[data-zip] {
     position: fixed;
     right: 60px;
     width: 200px;
+
+}
+
+.gray-button {
     background: -webkit-linear-gradient(top, #f5f5f5 0%, #dedede 100%);
     background: linear-gradient(to bottom, #f5f5f5 0%, #dedede 100%);
     border: 1px solid #bbb;
@@ -582,7 +597,7 @@ path[data-zip] {
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.5), 0 1px 0 0 white;
 }
 
-#btnSkipTips:hover {
+.gray-button:hover {
     background-image: -webkit-linear-gradient(top, #FFF, #dfdddd);
     background-image: -moz-linear-gradient(top, #FFF, #dfdddd);
     background-image: -o-linear-gradient(top, #FFF, #dfdddd);
@@ -651,7 +666,7 @@ path[data-zip] {
 
 div.arrow_box {
     position: relative;
-    background: #F8FFF1;
+    background: #FFF;
     border: 3px solid #389AA6;
     min-height: 120px;
     width: 300px;
