--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -16,15 +16,15 @@
                         <div class="col-xs-12">{{ survey.description }}</div>
 
                         <div class="col-xs-12 buttons-container">
-                            <a href="{% url 'survey-view' survey.code %}" class="btn btn-primary col-xs-12"
+                            <a href="{% url 'survey-view' survey.code %}" class="blue-button col-xs-12"
                                role="button">View
                                 Data</a>
 
                             <a href="{% static survey.pdf.url %}"
-                               class="btn btn-default col-xs-12"
-                               role="button" target="_blank">Open PDF</a>
+                               class="gray-button col-xs-12"
+                               role="button" target="_blank">View Survey Instrument</a>
 
-                            <a href="{% url 'survey-info' survey.code %}" class="btn btn-default col-xs-12"
+                            <a href="{% url 'survey-info' survey.code %}" class="gray-button col-xs-12"
                                role="button">About
                                 Survey</a>
                         </div>
