Fixed a bug in mean view that caused results with not sure answers to be shifted.

--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -11,12 +11,12 @@
 
                 <a href="{% url 'survey-view' survey.code %}" id="view-data" href="../" type="button"
                    class="btn btn-lg blue-button">
-                    View Data
+                    Explore results
                 </a>
 
                 <a target="_blank" href="{% static survey.pdf.url %}" id="view-instrument" href="../" type="button"
                    class="btn btn-lg gray-button">
-                    View Instrument
+                    view copy of survey
                 </a>
             </div>
             <div class="col-xs-12">
