--- a/src/surveyinterface/templates/surveyinterface/home.html
+++ b/src/surveyinterface/templates/surveyinterface/home.html
@@ -17,12 +17,11 @@
 
                         <div class="col-xs-12 buttons-container">
                             <a href="{% url 'survey-view' survey.code %}" class="blue-button col-xs-12"
-                               role="button">View
-                                Data</a>
+                               role="button">Explore results</a>
 
                             <a href="{% static survey.pdf.url %}"
                                class="gray-button col-xs-12"
-                               role="button" target="_blank">View Survey Instrument</a>
+                               role="button" target="_blank">View copy of survey</a>
 
                             <a href="{% url 'survey-info' survey.code %}" class="gray-button col-xs-12"
                                role="button">About
