Minor layout fixes

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -74,10 +74,10 @@
             <div id="top-bar">
                 <div id="captionContainer" class="panel panel-primary">
                   <div class="panel-heading">
-                    <span class="panel-title">Welcome!</span>
+                    <span id="txtTitle" class="panel-title">Welcome!</span>
                   </div>
                   <div class="panel-body">
-                    Select a question to get started
+                    <span id="txtDescription">Select a question to get started</span>
                   </div>
                 </div>
                 <div id="viewContainer" class="panel panel-primary">
